8282589: runtime/ErrorHandling/ErrorHandler.java fails on MacOS aarch64 in jdk 11

Reviewed-by: vkempik